feat: add analytics script in head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Banh Mi Bros</title>
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="dce9a8ed-f932-4eed-97f9-f1b670d06b3e"></script>
     </head>
     <body>
         <div id="root"></div>
